--- a/client/add_mtn.html
+++ b/client/add_mtn.html
@@ -104,6 +104,11 @@
                     </div>
 
                     <div class="form-group">
+                        <input class="form-check-input" type="checkbox" id="mtnSummit" value="yes" name="mtnSummit">
+                        <label class="form-check-label" for="mtnSummit">Summitted ?</label>
+                    </div>
+
+                    <div class="form-group">
                         <div class="row">
                             <div class="col">
                                 <label for="mtnLat">Lat</label>
